updates to googlemaps api

--- a/google_maps_api.html
+++ b/google_maps_api.html
@@ -42,7 +42,7 @@
 
         var geocoder = new google.maps.Geocoder();
 
-        var address = 'Chama Gaúcha Brazilian Steakhouse';
+        var address = 'Alamo';
 
         geocoder.geocode({"address": address}, function(results, status) {
 
@@ -54,7 +54,7 @@
         });
 
          // Create lat and long for our marker position
-         var meats = { lat: 41.832897, lng: -88.0260758 };
+         var meats = { lat: 29.4260, lng: -98.4861 };
 
          // Add the marker to our existing map
          var marker = new google.maps.Marker({
