--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,8 +5,36 @@
 </head>
 <body>
 
-<!-- INSERT HTML CODE SAMPLE HERE -->
+<h1>Example Page</h1>
+<div class="important">
+    <h3>NOTICE</h3>
+    <p>This is an important message!</p>
+</div>
+<div class="not-important">
+    <h2>Lorem Ipsum</h2>
+    <p>
+        Lorem ipsum dolor sit amet, incididunt ut <span class="important">labore et dolore magna aliqua.</span>, quis ut aliquip ex ea commodo.
+    </p>
+</div>
+<p class="important">This is also very important.</p>
 
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/my-custom-javascript.js"></script>"
+<script
+        src="https://code.jquery.com/jquery-2.2.4.js"
+        integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
+
+<script>
+    $(document).ready(function() {
+
+    "use strict";
+
+    alert("Hey the DOM is done loading if you're seeing this.")
+
+
+
+    });
+</script>
+
+
 </body>
