--- a/konami.html
+++ b/konami.html
@@ -2,9 +2,25 @@
 <html>
 <head>
     <title>Konami Code</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
 <h1>Konami Code</h1>
+
+<i class="fa fa-arrow-circle-up key0" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-up key1" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-down key2" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-down key3" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-left key4" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-right key5" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-left key6" style="font-size:60px;"></i>
+<i class="fa fa-arrow-circle-right key7" style="font-size:60px;"></i>
+<i class="fa fa-bold key8" style="font-size:60px;"></i>
+<i class="fa fa-font key9" style="font-size:60px;"></i>
+<i class="fa fa-share key10" style="font-size:60px;"></i>
+
+
 
 <script type="text/javascript" src="js/jquery-2.2.4.js"></script>
 <script>
@@ -19,14 +35,26 @@
         var pressedKey = event.keyCode;
         if (i === 10 && pressedKey === 13)
             alert("30 bonus lives");
-
         if (code[i] === pressedKey) {
+            var k = $(".fa").get([i]);
+            $(k).css('color', 'red');
             i++;
         } else {
             i = 0;
+            $('.fa').css('color', 'black');
         }
     });
+
 
 </script>
 </body>
 </html>
+
+
+<!--
+
+    .fa-arrow-circle-left    .fa-arrow-circle-right
+    .fa-arrow-circle-up   .fa-arrow-circle-down
+          .fa-btc                  .fa-at
+          .fa-share
+  -->
