--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-$END$
+
+<div id="posts"></div>
+
+
+
+
+
+
+
+
+<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
+
+<script>
+
+(function() {
+    "use strict";
+
+    var infos = $.ajax("data/blog.json").done(buildHTML);
+
+
+    function buildHTML(infos) {
+        var html = "";
+        html += "<h1> Blog Post </h1>";
+    infos.forEach(function(info){
+        html += "<h2>"+ info.title + "</h2>"
+        html += "<p>"+ info.content + "</p>"
+        html += "<em> tags: "+ info.categories + "</em>"
+        $('#posts').html(html);
+    })
+
+    }
+
+
+
+
+
+})();
+
+</script>
+
 </body>
 </html>
