--- a/weather_map.html
+++ b/weather_map.html
@@ -2,9 +2,115 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Weather Map</title>
+
 </head>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<style>
+    body {
+        background: #a3baff
+    }
+
+    .box {
+        background-color: white;
+        border-style: solid;
+    }
+
+    #map-canvas {
+        width: 100%;
+        height: 481px;
+        border-style: solid;
+    }
+
+</style>
 <body>
-$END$
+<div class="container">
+    <div class="row">
+        <h1> Weather App</h1>
+        <!--<h2>San Antonio<h2>-->
+            <hr>
+            <div class="row">
+                <div id="display"></div>
+            </div>
+            <div class="row">
+                <div id="map-canvas"></div>
+            </div>
+
+
+<script type="text/javascript" src="js/jquery-2.2.4.js"></script>
+
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4E0TfyLcFU7GQucz_lOIvyD3K_sCMjLc"></script>
+    <script>
+        (function() {
+            "use strict";
+
+            var latM = 29.426791;
+            var lngM = -98.489602;
+
+        // Get that weather.
+            function pullWeather() {
+                var weather = $.get("http://api.openweathermap.org/data/2.5/forecast", {
+                    APPID: "640fa61c6650a75dfd1779397150bbbe",
+                    lat: latM,
+                    lon: lngM,
+                    units: "imperial"
+                }).done(buildHTML);
+            };
+
+        // temp, clouds, humidity, wind, pressure
+            function buildHTML(weather) {
+                var html = "<h2>Lat: " + latM.toPrecision(5) +" Long: " + lngM.toPrecision(5) + "</h2>";
+                var days = ["7", "15", "23"];
+                var i = 0;
+
+                for (i = 0; i < days.length; i++) {
+                    var d = days[i];
+                    html += "<div class=\"col-12 col-md-4 col-sm-6 box\">";
+                    html += "<h3> <strong>Temp:</strong> " + weather.list[3].main.temp + "</h3>";
+                    html += "<img src=\"http://openweathermap.org/img/w/" + weather.list[d].weather[0].icon + ".png\" width=\"75\" height=\"75\"><br>"
+                    html += "<strong>Date:</strong> " + weather.list[d].dt_txt + "<br>"
+                    html += "<strong>Clouds:</strong> " + weather.list[d].weather[0].main + "<br>";
+                    html += "<strong>Humidity:</strong> " + weather.list[d].main.humidity + "<br>";
+                    html += "<strong>Wind:</strong> " + weather.list[d].wind.speed + "mph<br>";
+                    html += "<strong>Pressure:</strong> " + weather.list[d].main.pressure;
+                    html += "<p></p></div>"
+                    $('#display').html(html);
+                };
+            }
+
+            // Create lat and long for our marker position
+            var city = { lat: latM, lng: lngM };
+
+            // Set our map options
+            var mapOptions = {
+                // Set the zoom level
+                zoom: 4,
+
+                // This sets the center of the map at our location
+                center: city
+            };
+
+            // Render the map
+            var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+
+            // // Add the marker to our existing map
+            var marker = new google.maps.Marker({
+                position: city,
+                map: map,
+                draggable:true,
+                title:"Drag to select weather in area."
+            });
+
+            marker.addListener('dragend', function() {
+                lngM = marker.getPosition().lng();
+                latM = marker.getPosition().lat();
+                pullWeather();
+                console.log({ lat: latM, lng: lngM});
+            });
+
+            pullWeather();
+        })();
+
+    </script>
 </body>
 </html>
