working on practice exercise

--- a/BONUS/flex-panels-image-gallery.html
+++ b/BONUS/flex-panels-image-gallery.html
@@ -97,19 +97,20 @@
         <p>Receive</p>
     </div>
     <div class="panel panel3">
-        <p>Experience</p>
-        <p>It</p>
-        <p>Today</p>
+        <p>Web Developer</p>
+        <p>David</p>
+        <p>Alexander</p>
     </div>
     <div class="panel panel4">
         <p>Give</p>
-        <p>All</p>
+        <p>Experience</p>
         <p>You can</p>
     </div>
     <div class="panel panel5">
-        <p>Life</p>
-        <p>In</p>
-        <p>Motion</p>
+        <p>LinkedIn</p>
+        <p>Social</p>
+        <p><a href="http://lmgtfy.com/?q=davidalex620+github" style="color:white">GitHub</a>
+        </p>
     </div>
 </div>
 
