updates to Nearby Restroom app

--- a/RestroomAPI/index.html
+++ b/RestroomAPI/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, inital-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Restroom Finder</title>
 
     <link href="style.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 
     <script src="script.js"></script>
     <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4E0TfyLcFU7GQucz_lOIvyD3K_sCMjLc&callback=initMap">
+
     </script>
 
 </body>
