--- a/RestroomAPI/index.html
+++ b/RestroomAPI/index.html
@@ -10,13 +10,18 @@
 </head>
 <body>
 
-    <p id="demo"></p>
+
     <div id="map"></div>
 
     <script src="script.js"></script>
     <script
-
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBp0EpU-vABikM2TgkHSx8sxAhUFMguvOw&callback=initMap">
     </script>
 
 </body>
 </html>
+
+
+
+<!--https://www.refugerestrooms.org/api/docs/#!/restrooms/GET_version_restrooms_by_location_format-->
+<!--https://www.taniarascia.com/google-maps-apis-for-multiple-locations/-->
